--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
 </head>
 <body>
 	<div id="app">
-		<ul>
+		<ul style="list-style: none">
 			<li>width:<input  type="range" min="0" max="300" step="5" v-model="width">{{ width+'px' }}</li>
 			<li>height:<input type="range" min="0" max="300" step="5" v-model="height">{{ height+'px' }}</li>
 			<li>red:<input type="range" min="0" max="255" step="5" v-model="red">{{ red }}</li>
-			<li>greed:<input type="range" min="0" max="255" step="5" v-model="green">{{ green }}</li>
+			<li>green:<input type="range" min="0" max="255" step="5" v-model="green">{{ green }}</li>
 			<li>blue:<input type="range" min="0" max="255" step="5" v-model="blue">{{ blue }}</li>
 			<li>border-radius:<input type="range" min="0" max="50" step="1" v-model="borderRadius">{{borderRadius+'%'}}</li>
 		</ul>
